# pi-plugins

./: .gitignore  README.md  TODO.md  marketplace.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
plugins/build123d/: README.md  README.upstream.md  package.json  pyproject.toml
plugins/build123d/examples/: simple_box.py
plugins/build123d/extensions/: build123d.ts
plugins/build123d/skills/build123d/: SKILL.md
plugins/build123d/src/build123d_mcp/: __init__.py  exporter.py  server.py
plugins/cron/: README.md  package.json
plugins/cron/extensions/: cron.ts
plugins/dex/: README.md  package.json
plugins/dex/extensions/: dex.ts
plugins/dude/: README.md  package.json
plugins/dude/extensions/: dude.ts
plugins/email/: README.md  package.json
plugins/fleet/: README.md  package.json
plugins/fleet/extensions/: fleet.ts
plugins/kicad/: README.md  README.upstream.md  package.json
plugins/kicad-buddy/: README.md  package.json
plugins/kicad/docs/: IO.md  (+1 more)
plugins/micropython/: README.md  package.json  pyproject.toml
plugins/micropython/extensions/: micropython.ts
plugins/micropython/skills/micropython/: SKILL.md
plugins/micropython/src/micropython_claude_plugin/: __init__.py  file_ops.py  serial_connection.py  server.py
plugins/mozart/: README.md  package.json
plugins/terse/: README.md  package.json
plugins/theology/: README.md  package.json
schemas/: pi-marketplace.schema.json
scripts/: clean-package.mjs  clean.mjs  noop.mjs  validate-marketplace.mjs  validate-package.mjs
shared/: mcp-stdio.ts
(+12 files in other folders)
