[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build123d-mcp"
version = "2026.3.10"
description = "MCP server for CAD modeling with build123d in Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "build123d>=0.7.0",
    "CairoSVG>=2.7.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
build123d-mcp = "build123d_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/build123d_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
